--- a/index.html
+++ b/index.html
@@ -12,35 +12,43 @@
         body {
             background-color: #f1f1f1;
         }
+
         .navbar {
             margin-bottom: 20px;
         }
+
         .container {
             margin-top: 20px;
         }
+
         .card {
             margin-bottom: 20px;
         }
+
         .carousel-item img {
-            max-height: 400px;
+            max-height: 500px;
             object-fit: cover;
         }
+
         .newsletter-flutuante {
-            display: none; /* Inicialmente escondido */
+            display: none;
+            /* Inicialmente escondido */
         }
+
         @media (max-width: 768px) {
             .newsletter-flutuante {
                 width: 90%;
                 right: 5%;
             }
         }
+
         @media (min-width: 769px) {
             .newsletter-flutuante {
                 width: 300px;
                 right: 20px;
             }
         }
-        
+
         .newsletter-flutuante {
             position: fixed;
             bottom: 20px;
@@ -85,13 +93,19 @@
             color: #666;
             cursor: pointer;
         }
+
+        .card {
+            width: 300px;
+
+
+        }
     </style>
     </heaFFd>
 
 <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">GeekStore</a>
+            <a class="navbar-brand" href="index.html">GeekStore</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -118,18 +132,18 @@
                                 Produtos
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="loja.html">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="camisetas.html">Camisetas</a></li>
+                                <li><a class="dropdown-item" href="#">Canecas</a></li>
+                                <li><a class="dropdown-item" href="#">Chaveiros</a></li>
+                                <li><a class="dropdown-item" href="#">Colecionaveis</a></li>
                             </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobre.html">sobre</a>
                         </li>
                     </ul>
-                    <form class="d-flex mt-3" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-success" type="submit">Search</button>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Pesquisar</button>
                     </form>
                 </div>
             </div>
@@ -140,63 +154,102 @@
     <div class="container mt-5 pt-5">
         <h1>Bem-vindo à GeekStore!</h1>
         <p>Aqui você encontra os melhores produtos geek.</p>
-    <div class="newsletter-flutuante" id="newsletterBox">
-        <span class="newsletter-fechar"
-            onclick="document.getElementById('newsletterBox').style.display='none';">&times;</span>
-        <h3>Assine a Newsletter</h3>
-        <p>Receba novidades no seu e-mail!</p>
-        <form action="https://SEU_BACKEND_OU_SERVICO.com" method="POST">
-            <input type="email" name="email" placeholder="Seu e-mail" required>
-            <button type="submit">Inscrever-se</button>
-        </form>
-    </div>
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-                <img src="Imagens/deadpool-wolverine-piticas-3.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="Imagens/piticas-the-flash.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="Imagens/gkpb-piticas-spyxfamily-fate.jpg" class="d-block w-100" alt="...">
-            </div>
+        <div class="newsletter-flutuante" id="newsletterBox">
+            <span class="newsletter-fechar"
+                onclick="document.getElementById('newsletterBox').style.display='none';">&times;</span>
+            <h3>Assine a Newsletter</h3>
+            <p>Receba novidades no seu e-mail!</p>
+            <form action="https://SEU_BACKEND_OU_SERVICO.com" method="POST">
+                <input type="email" name="email" placeholder="Seu e-mail" required>
+                <button type="submit">Inscrever-se</button>
+            </form>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+        <script>
+            setTimeout(function () {
+                document.getElementById('newsletterBox').style.display = 'block';
+            }, 5000);
+        </script>
+
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="Imagens/deadpool-wolverine-piticas-3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="Imagens/piticas-the-flash.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="Imagens/gkpb-piticas-spyxfamily-fate.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="card" style="width: 18rem;"></div>
+
     </div>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="Imagens/camisa1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Camiseta Marvel</h5>
-                        <p class="card-text">59,99</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                    </div>
+       
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card">
+                <img src="Imagens/camisa1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
-            <div class="col-md-4">
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-                    crossorigin="anonymous"></script>
-                <div class="card" style="width: 18rem;">
-</body>
+        <div class="col">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-    <p><a href="https://www.instagram.com/" target="_blank" class="text-white">Instagram</a> |<a 
-          href="https://www.tiktok.com/" target="_blank" class="text-white">TikTok</a></p>  
-</footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
+    <div class="card" style="width: 18rem;">
+    </div>
+    </div>
+</body>
 
 </html>
