--- a/acessorios.html
+++ b/acessorios.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camisetas</title>
+    <title>sobre Nós</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
+
 <body>
+
     <body>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
@@ -39,14 +42,10 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item" href="camisetas.html">Camisetas</a></li>
-                                    <li><a class="dropdown-item" href="#">Canecas</a></li>
-                                    <li><a class="dropdown-item" href="#">Chaveiros</a></li>
-                                    <li><a class="dropdown-item" href="#">Colecionaveis</a></li>
+                                    <li><a class="dropdown-item" href="funkopop.html">Funko pop</a></li>
+                                    <li><a class="dropdown-item" href="gamers.html">gamers</a></li>
+                                    <li><a class="dropdown-item" href="acessorios.html">acessórios</a></li>
                                 </ul>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="parcerias.html">Parcerias</a>
-                            </li>
-                        </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Pesquisar</button>
@@ -55,9 +54,10 @@
                 </div>
             </div>
         </nav>
-     
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-        crossorigin="anonymous"></script>
-</body>
+            integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+            crossorigin="anonymous"></script>
+    </body>
+
 </html>
