--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background-color: #f1f1f1;
+            background-color: #adb5bd;
         }
 
         .navbar {
@@ -96,6 +96,7 @@
 
         .card {
             width: 300px;
+            background-color: #000000;
 
 
         }
@@ -133,14 +134,11 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li><a class="dropdown-item" href="camisetas.html">Camisetas</a></li>
-                                <li><a class="dropdown-item" href="#">Canecas</a></li>
-                                <li><a class="dropdown-item" href="#">Chaveiros</a></li>
-                                <li><a class="dropdown-item" href="#">Colecionaveis</a></li>
+                                <li><a class="dropdown-item" href="funkopop.html">Funko pop</a></li>
+                                <li><a class="dropdown-item" href="gamers.html">gamers</a></li>
+                                <li><a class="dropdown-item" href="acessorios.html">acessórios</a></li>
+                          
                             </ul>
-                        <li class="nav-item">
-                            <a class="nav-link" href="sobre.html">sobre</a>
-                        </li>
-                    </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Pesquisar</button>
@@ -236,7 +234,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                    <p class= "text-light bg-dark">This is a longer card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
