edição das camisetas

--- a/camisetas.html
+++ b/camisetas.html
@@ -52,7 +52,89 @@
                 </div>
             </div>
         </nav>
-        <p> </p>
+        <div class="container mt-5 pt-5">
+            <h1 class="text-center">Camisetas</h1>
+            <div class="row mt-4">
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/camisea marvel homem aranha run.webp" class="card-img-top" alt="Camiseta 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Camiseta Marvel </h5>
+                            <p class="card-text">69,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/camisea marvel homem aranha.webp" class="card-img-top" alt="Camiseta 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Camiseta Marvel Capitão América</h5>
+                            <p class="card-text">69,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/camiseta jujutsu.jpg" class="card-img-top" alt="Camiseta 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Camiseta Marvel Thor</h5>
+                            <p class="card-text">69,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/camiseta hunter x hunter.jpeg" class="card-img-top" alt="Camiseta 4">
+                        <div class="card-body">
+                            <h5 class="card-title">Camiseta Marvel Hulk</h5>
+                            <p class="card-text">69,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/camiseta rick and morty.webp" class="card-img-top" alt="Camiseta 5">
+                        <div class="card-body">
+                            <h5 class="card-title">Camiseta Marvel Viúva Negra</h5>
+                            <p class="card-text">69,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/camiseta invicible.webp" class="card-img-top" alt="Camiseta 6">
+                        <div class="card-body">
+                            <h5 class="card-title">Camiseta Marvel Pantera Negra</h5>
+                            <p class="card-text">69,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/camiseta it.webp" class="card-img-top" alt="Camiseta 7">
+                        <div class="card-body">
+                            <h5 class="card-title">Camiseta Marvel Doutor Estranho</h5>
+                            <p class="card-text">69,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/camiseta mortal kombat.webp" class="card-img-top" alt="Camiseta 8">
+                        <div class="card-body">
+                            <h5 class="card-title">Camiseta Marvel Loki</h5>
+                            <p class="card-text">69,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
   
      
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
