--- a/acessorios.html
+++ b/acessorios.html
@@ -8,6 +8,52 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
+<style>
+    body {
+        background-color: #adb5bd;
+    }
+    .card {
+        margin-bottom: 20px;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
+        transition: transform 0.2s;
+    }
+    .card:hover {
+        transform: scale(1.05);
+
+    }
+    .card-body {
+        text-align: center;
+        background-color: #f8f9fa;
+        border-radius: 0 0 10px 10px;
+        padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);  
+    }
+    .card img {
+        height: 300px;
+        object-fit: cover;
+    }
+    .card-title {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+    .card-text {
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+        
+    }
+    .btn-primary {
+        background-color: #007bff;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        font-size: 1rem;
+        transition: background-color 0.3s;
+    }
+</style>
 
 <body>
 
@@ -54,10 +100,99 @@
                 </div>
             </div>
         </nav>
+        <div class="container mt-5 pt-5">
+            <h1 class="text-center">Acessórios</h1>
+            <div class="row mt-4">
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Acessórios 1">
+                        <div class="card-body">
+                            <h5 class="card-title"># </h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Acessórios 2">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Acessórios 3">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Acessórios 4">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Acessórios 5">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Acessórios 6">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Acessórios 7">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Acessórios 8">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+  
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
             crossorigin="anonymous"></script>
     </body>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
+        <p>Desenvolvido por Lucas</p>
 
 </html>
