--- a/camisetas.html
+++ b/camisetas.html
@@ -57,7 +57,7 @@
             <div class="row mt-4">
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="Imagens/camisea marvel homem aranha run.webp" class="card-img-top" alt="Camiseta 1">
+                        <img src="Imagens/camiseta marvel homem aranha run.webp" class="card-img-top" alt="Camiseta 1">
                         <div class="card-body">
                             <h5 class="card-title">Camiseta Marvel </h5>
                             <p class="card-text">69,90</p>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="Imagens/camisea marvel homem aranha.webp" class="card-img-top" alt="Camiseta 2">
+                        <img src="Imagens/camiseta marvel homem aranha.webp" class="card-img-top" alt="Camiseta 2">
                         <div class="card-body">
                             <h5 class="card-title">Camiseta Marvel Capitão América</h5>
                             <p class="card-text">69,90</p>
@@ -135,10 +135,14 @@
                         </div>
                     </div>
                 </div>
-  
-     
+            </div>
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
 </body>
+<footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2023 GeekStore. Todos os direitos reservados.</p>
+    <p>Desenvolvido por [Seu Nome]</p>
 </html>
