--- a/gamers.html
+++ b/gamers.html
@@ -4,10 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sobre Nós</title>
+    <title>Gamers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
+<style>
+    body {
+        background-color: #adb5bd;
+    }
+    .card {
+        margin-bottom: 20px;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
+        transition: transform 0.2s;
+    }
+    .card:hover {
+        transform: scale(1.05);
+
+    }
+    .card-body {
+        background-color: #f8f9fa;
+        border-radius: 0 0 10px 10px;
+        padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);  
+    }
+    .card img {
+        height: 300px;
+        object-fit: cover;
+    }
+   
+    .card-title {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+    .card-text {
+        font-weight: bold;
+        margin-bottom: 10px; 
+    }
+    .btn-primary {
+        background-color: #007bff;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        font-size: 1rem;
+        transition: background-color 0.3s;
+    }
+    .btn-primary:hover {
+        background-color: #0056b3;
+        color: #fff;
+        text-decoration: none;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
+    }
+</style>
 
 <body>
 
@@ -54,10 +104,104 @@
                 </div>
             </div>
         </nav>
+        <div class="container mt-5 pt-5">
+            <h1 class="text-center">Gamers</h1>
+            <div class="row mt-4">
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/notebook gamer.webp" class="card-img-top" alt="Gamers 1">
+                        <div class="card-body">
+                            <h5 class="card-title">notebook gamer </h5>
+                            <p class="card-text">Notebook Gamer Acer Nitro V15 Intel </p>
+                            <p class="card-text">4.219,90</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/xbox series s.webp" class="card-img-top" alt="Gamers 2">
+                        <div class="card-body">
+                            <h5 class="card-title">xbox series s</h5>
+                            <p class="card-text">Console Xbox Series S 512GB</p>
+                            <p class="card-text">2.499,99</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/Computador pc gamer.webp" class="card-img-top" alt="Gamers 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Computador pc gamer</h5>
+                            <p class="card-text">Computador  Gamer Completo 16Gb Ram / Ssd 480Gb</p>
+                            <p class="card-text">2.099,49</p>
+                            <a href="#" class="btn btn-primary"><i class="bi bi-basket"></i>Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Gamers 4">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">
+                            Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Gamers 5">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Gamers 6">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Gamers 7">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="Imagens/" class="card-img-top" alt="Gamers 8">
+                        <div class="card-body">
+                            <h5 class="card-title">#</h5>
+                            <p class="card-text">#</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
             crossorigin="anonymous"></script>
     </body>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
+        <p>Desenvolvido por Lucas</p>
+    </footer>
 
 </html>
