adicionar arquivo de estilo e aplicar estilos às páginas parcerias e index

--- a/index.html
+++ b/index.html
@@ -7,194 +7,8 @@
     <title>GeekStore</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-
-    <style>
-        body {
-            background-color: #adb5bd;
-            color: #212529;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-
-
-        }
-
-        .container {
-            margin-top: 20px;
-        }
-
-        .card {
-            margin-bottom: 20px;
-        }
-
-        .carousel-item img {
-            height: 500px;
-            max-width: 100%;
-            object-fit: cover;
-
-        }
-
-        .newsletter-flutuante {
-            display: none;
-            /* Inicialmente escondido */
-        }
-
-        @media (max-width: 768px) {
-            .newsletter-flutuante {
-                width: 90%;
-                right: 5%;
-            }
-        }
-
-        @media (min-width: 769px) {
-            .newsletter-flutuante {
-                width: 300px;
-                right: 20px;
-            }
-        }
-
-        .newsletter-flutuante {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            width: 300px;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-            padding: 20px;
-            border-radius: 8px;
-            font-family: Arial, sans-serif;
-            z-index: 1000;
-        }
-
-        .newsletter-flutuante h3 {
-            margin-top: 0;
-        }
-
-        .newsletter-flutuante input[type="email"] {
-            width: 100%;
-            padding: 8px;
-            margin: 10px 0;
-            border: 1px solid #adb5bd;
-            border-radius: 4px;
-        }
-
-        .newsletter-flutuante button {
-            width: 100%;
-            padding: 10px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .newsletter-fechar {
-            position: absolute;
-            top: 8px;
-            right: 12px;
-            font-size: 18px;
-            color: #666;
-            cursor: pointer;
-        }
-
-        .newsletter-fechar:hover {
-            color: #000;
-        }
-
-        .newsletter-fechar:active {
-            color: #000;
-        }
-
-        .newsletter-fechar:focus {
-            outline: none;
-        }
-
-        .newsletter-fechar:focus-visible {
-            outline: none;
-        }
-
-        .card img {
-            height: 300px;
-            object-fit: cover;
-        }
-
-        .card-title {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        .card-text {
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-size: 1rem;
-            transition: background-color 0.3s;
-        }
-
-        .card {
-            margin-bottom: 20px;
-            border: none;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
-            transition: transform 0.2s;
-        }
-
-        .card:hover {
-            transform: scale(1.05);
-        }
-
-        .card-body {
-            text-align: center;
-            background-color: #f8f9fa;
-            border-radius: 0 0 10px 10px;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
-        }
-
-        .card img {
-            height: 300px;
-            object-fit: cover;
-        }
-
-        .card-title {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .card-text {
-            font-size: 1.2rem;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-size: 1rem;
-            transition: background-color 0.3s;
-        }
-
-        .carrrosel {
-            height: 500px;
-            width: 100%;
-            object-fit: cover;
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+       
 </head>
 
 <body>
