--- a/camisetas.html
+++ b/camisetas.html
@@ -6,171 +6,10 @@
     <title>Camisetas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
-<style>
-     body {
-        background-color: #adb5bd;
-    }
-    .card {
-        margin-bottom: 20px;
-        border: none;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
-        transition: transform 0.2s;
-    }
-    .card:hover {
-        transform: scale(1.05);
 
-    }
-    .card-body {
-        text-align: center;
-        background-color: #f8f9fa;
-        border-radius: 0 0 10px 10px;
-        padding: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);  
-    }
-    .card img {
-        height: 300px;
-        object-fit: cover;
-    }
-    .card-title {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 10px;
-    }
-    .card-text {
-        font-size: 1.2rem;
-        font-weight: bold;
-        margin-bottom: 10px;
-
-    }
-    .btn-primary {
-        background-color: #007bff;
-        border: none;
-        border-radius: 5px;
-        padding: 10px 20px;
-        font-size: 1rem;
-        transition: background-color 0.3s;
-    }
-    .btn-primary:hover {
-        background-color: #0056b3;
-        color: #fff;
-        text-decoration: none;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
-    }
-    .navbar {
-        margin-bottom: 20px;
-    }
-    .offcanvas-body {
-        background-color: #343a40;
-    }
-    .offcanvas-header {
-        border-bottom: 1px solid #495057;
-    }
-    .offcanvas-title {
-        color: #fff;
-    }
-    .offcanvas-body a {
-        color: #fff;
-    }
-    .offcanvas-body a:hover {
-        color: #007bff;
-        text-decoration: none;
-    }
-    .offcanvas-body .nav-link {
-        padding: 10px 15px;
-    }
-    .offcanvas-body .nav-link:hover {
-        background-color: #495057;
-        border-radius: 5px;
-    }
-    .offcanvas-body .dropdown-menu {
-        background-color: #343a40;
-    }
-    .offcanvas-body .dropdown-item {
-        color: #fff;
-    }
-    .offcanvas-body .dropdown-item:hover {
-        background-color: #495057;
-        color: #007bff;
-    }
-    .offcanvas-body .dropdown-toggle {
-        color: #fff;
-    }
-    .offcanvas-body .dropdown-toggle:hover {
-        color: #007bff;
-        text-decoration: none;
-    }
-    .offcanvas-body .form-control {
-        background-color: #495057;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-    }
-    .offcanvas-body .form-control:focus {
-        background-color: #495057;
-        color: #fff;
-        border: none;
-        box-shadow: none;
-    }
-    .offcanvas-body .btn-outline-success {
-        color: #fff;
-        border-color: #fff;
-    }
-    .offcanvas-body .btn-outline-success:hover {
-        background-color: #fff;
-        color: #343a40;
-        border-color: #fff;
-    }
-    .offcanvas-body .btn-outline-success:focus {
-        box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
-    }
-    .footer {
-        background-color: #343a40;
-        color: #fff;
-        padding: 20px 0;
-    }
-    .footer p {
-        margin: 0;
-    }
-    .footer a {
-        color: #fff;
-        text-decoration: none;
-    }
-    .footer a:hover {
-        text-decoration: underline;
-    }
-    .footer .social-icons a {
-        margin: 0 10px;
-        color: #fff;
-        font-size: 1.5rem;
-    }
-    .footer .social-icons a:hover {
-        color: #007bff;
-    }
-    .footer .social-icons {
-        margin-top: 10px;
-    }
-    .footer .social-icons a {
-        margin: 0 10px;
-        color: #fff;
-        font-size: 1.5rem;
-    }
-    .footer .social-icons a:hover {
-        color: #007bff;
-    }
-    .footer .social-icons {
-        margin-top: 10px;
-    }
-    .footer .social-icons a {
-        margin: 0 10px;
-        color: #fff;
-        font-size: 1.5rem;
-    }
-    .footer .social-icons a:hover {
-        color: #007bff;
-    }
-</style>
 <body>
     <div id="menu"></div>
     <script>
@@ -190,9 +29,11 @@
                     <div class="card">
                         <img src="Imagens/camiseta marvel homem aranha run.webp" class="card-img-top" alt="Camiseta 1">
                         <div class="card-body">
-                            <h5 class="card-title">Camiseta Marvel </h5>
+                            <h5 class="card-title">Camiseta Marvel homem aranha run </h5>
                             <p class="card-text">69,90</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -200,9 +41,11 @@
                     <div class="card">
                         <img src="Imagens/camiseta marvel homem aranha.webp" class="card-img-top" alt="Camiseta 2">
                         <div class="card-body">
-                            <h5 class="card-title">Camiseta Marvel Capitão América</h5>
+                            <h5 class="card-title">Camiseta Marvel homem aranha</h5>
                             <p class="card-text">69,90</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -210,9 +53,11 @@
                     <div class="card">
                         <img src="Imagens/camiseta jujutsu.jpg" class="card-img-top" alt="Camiseta 3">
                         <div class="card-body">
-                            <h5 class="card-title">Camiseta Marvel Thor</h5>
+                            <h5 class="card-title">Camiseta jujutsu</h5>
                             <p class="card-text">69,90</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -220,9 +65,11 @@
                     <div class="card">
                         <img src="Imagens/camiseta hunter x hunter.jpeg" class="card-img-top" alt="Camiseta 4">
                         <div class="card-body">
-                            <h5 class="card-title">Camiseta Marvel Hulk</h5>
+                            <h5 class="card-title">Camiseta hunter x hunter</h5>
                             <p class="card-text">69,90</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -232,7 +79,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Camiseta Marvel Viúva Negra</h5>
                             <p class="card-text">69,90</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -242,7 +91,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Camiseta Marvel Pantera Negra</h5>
                             <p class="card-text">69,90</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>Comprar</a>
+                            
                         </div>
                     </div>
                 </div>
@@ -252,7 +104,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Camiseta Marvel Doutor Estranho</h5>
                             <p class="card-text">69,90</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -262,7 +116,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Camiseta Marvel Loki</h5>
                             <p class="card-text">69,90</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>Comprar</a>
                         </div>
                     </div>
                 </div>
