--- a/gamers.html
+++ b/gamers.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+          <!-- Ícones Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -127,6 +129,16 @@
                 </div>
             </div>
         </div>
+   
+        <script>
+            function adicionarAoCarrinho(nome, preco) {
+              const produto = { nome, preco };
+              let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+              carrinho.push(produto);
+              localStorage.setItem('carrinho', JSON.stringify(carrinho));
+              alert(`${nome} foi adicionado ao carrinho!`);
+            }
+          </script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
