--- a/menu.html
+++ b/menu.html
@@ -20,18 +20,22 @@
                     <li class="nav-item">
                         <a class="nav-link" href="parcerias.html">Parcerias</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Produtos
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="camisetas.html">Camisetas</a></li>
-                            <li><a class="dropdown-item" href="funkopop.html">Funko pop</a></li>
-                            <li><a class="dropdown-item" href="gamers.html">gamers</a></li>
-                            <li><a class="dropdown-item" href="acessorios.html">acessórios</a></li>
-
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="carrinho.html"><i class="bi bi-cart"></i> Carrinho</a>
+                    </li>
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Produtos
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="camisetas.html">Camisetas</a></li>
+                                <li><a class="dropdown-item" href="funkopop.html">Funko pop</a></li>
+                                <li><a class="dropdown-item" href="gamers.html">gamers</a></li>
+                                <li><a class="dropdown-item" href="acessorios.html">acessórios</a></li>
+                            </ul>
+                        </li>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Pesquisar</button>
