melhorar a página de parcerias e carrinho com novos estilos, estrutura e ícones do Bootstrap

--- a/funkopop.html
+++ b/funkopop.html
@@ -34,7 +34,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Funko Pop Dale</h5>
                         <p class="card-text">69,90</p>
-                        <a  class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Dale', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <a  class="btn btn-primary"onclick="adicionarAoCarrinho('funko pop Dale', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                           </svg>Comprar</a>
                     </div>
@@ -46,7 +46,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Funko Pop Envy</h5>
                         <p class="card-text">69,90</p>
-                        <a  class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Envy', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <a  class="btn btn-primary"onclick="adicionarAoCarrinho('funko pop Envy', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                           </svg>Comprar</a>
                     </div>
@@ -58,7 +58,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Funko Pop Garfield</h5>
                         <p class="card-text">69,90</p>
-                        <a  class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Garfield', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <a  class="btn btn-primary"onclick="adicionarAoCarrinho('funko pop Garfield', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                           </svg>Comprar</a>
                     </div>
@@ -70,7 +70,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Funko Pop Jaq & Gus Gus</h5>
                         <p class="card-text">69,90</p>
-                        <a  class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Jaq $ Gus Gus', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <a  class="btn btn-primary"onclick="adicionarAoCarrinho('funko pop Jaq & Gus Gus', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                           </svg>Comprar</a>
                     </div>
@@ -82,7 +82,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Funko Pop Michael Jackson</h5>
                         <p class="card-text">69,90</p>
-                        <a  class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Michael Jackson', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <a  class="btn btn-primary"onclick="adicionarAoCarrinho('funko pop Micahel jackson', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                           </svg>Comprar</a>
                     </div>
@@ -94,7 +94,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Funko Pop Pink Panther</h5>
                         <p class="card-text">69,90</p>
-                        <a  class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Pink Panther', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <a  class="btn btn-primary"onclick="adicionarAoCarrinho('funko pop Pink Panther', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                           </svg>Comprar</a>
                     </div>
@@ -106,7 +106,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Funko Pop Sherk</h5>
                         <p class="card-text">69,90</p>
-                        <a  class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Sherk', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <a  class="btn btn-primary"onclick="adicionarAoCarrinho('funko pop Sherk', 69.90)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                           </svg>Comprar</a>
                     </div>
@@ -128,36 +128,35 @@
     </div>
 
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
-      <!-- Toast “produto adicionado” -->
-      <div id="toastCarrinho" class="toast align-items-center text-bg-success border-0" role="alert">
-        <div class="d-flex">
-          <div id="toastBody" class="toast-body">
-            Produto adicionado ao carrinho!
+        <!-- Toast “produto adicionado” -->
+        <div id="toastCarrinho" class="toast align-items-center text-bg-success border-0" role="alert">
+          <div class="d-flex">
+            <div id="toastBody" class="toast-body">
+              Produto adicionado ao carrinho!
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
           </div>
-          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
         </div>
       </div>
-    </div>
-   
-   <script>
-  function adicionarAoCarrinho(nome, preco) {
-    // salva no localStorage
-    const produto  = { nome, preco };
-    const carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
-    carrinho.push(produto);
-    localStorage.setItem('carrinho', JSON.stringify(carrinho));
-
-    // mensagem via Toast ------------------------------------
-    const toastBody = document.getElementById('toastBody');
-    toastBody.textContent = `"${nome}" foi adicionado ao carrinho.`;
-
-    const toastEl   = document.getElementById('toastCarrinho');
-    const toast     = bootstrap.Toast.getOrCreateInstance(toastEl, { delay: 2500 });
-    toast.show();
-  }
-</script>
-
-
+     
+     <script>
+    function adicionarAoCarrinho(nome, preco) {
+      // salva no localStorage
+      const produto  = { nome, preco };
+      const carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+      carrinho.push(produto);
+      localStorage.setItem('carrinho', JSON.stringify(carrinho));
+  
+      // mensagem via Toast ------------------------------------
+      const toastBody = document.getElementById('toastBody');
+      toastBody.textContent = `"${nome}" foi adicionado ao carrinho.`;
+  
+      const toastEl   = document.getElementById('toastCarrinho');
+      const toast     = bootstrap.Toast.getOrCreateInstance(toastEl, { delay: 2500 });
+      toast.show();
+    }
+  </script>
+  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
