--- a/carrinho.html
+++ b/carrinho.html
@@ -1,83 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeekStore</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Carrinho de Compras</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/animate.css/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <!-- Ícones Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        .card {
+            border: none;
+            border-radius: 1.25rem;
+        }
+
+        .card-header {
+            border-top-left-radius: 1.25rem;
+            border-top-right-radius: 1.25rem;
+            font-weight: 600;
+        }
+
+        .btn {
+            border-radius: 1rem;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="menu"></div>
-    <script>
-        //carregar o conteudo do menu.html
-        fetch('menu.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('menu').innerHTML = data;
-            })
-            .catch(error => console.error('Erro ao carregar o menu:', error));
 
-    </script>
-
-    <div class="card">
-        <div class="card-header">Produtos</div>
-        <ul class="list-group list-group-flush" id="lista-produtos"></ul>
-        <div class="card-footer d-flex justify-content-between">
-            <strong>Total (sem frete):</strong> <strong id="total-produtos">R$ 0,00</strong>
-        </div>
-    </div>
-
-    <!-- Cupom de Desconto -->
-    <div class="card">
-        <div class="card-header">Cupom de Desconto</div>
-        <div class="card-body">
-            <div class="input-group">
-                <input type="text" id="cupom" class="form-control" placeholder="Digite o cupom" />
-                <button class="btn btn-secondary" onclick="aplicarCupom()">Aplicar</button>
+    <div class="container py-5">
+        <div class="row g-4">
+            <div id="menu"></div>
+            <script>
+                //carregar o conteudo do menu.html
+                fetch('menu.html')
+                    .then(response => response.text())
+                    .then(data => {
+                        document.getElementById('menu').innerHTML = data;
+                    })
+                    .catch(error => console.error('Erro ao carregar o menu:', error));
+            </script>
+            <!-- Carrinho -->
+            <div class="col-lg-8">
+                <div class="card shadow-sm">
+                    <div class="card-header bg-primary text-white fs-5">
+                        🛍️ Seus Produtos
+                    </div>
+                    <ul class="list-group list-group-flush" id="lista-produtos"></ul>
+                    <div class="card-footer d-flex justify-content-between align-items-center fs-5">
+                        <span>Total (sem frete):</span>
+                        <strong id="total-produtos">R$ 0,00</strong>
+                    </div>
+                    <div class="card-footer text-end">
+                        <button class="btn btn-outline-danger btn-sm" onclick="limparCarrinho()">
+                            <i class="bi bi-trash3"></i> Limpar Carrinho
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div class="mt-2 text-success" id="mensagem-cupom"></div>
-        </div>
-    </div>
 
-    <!-- Cálculo de Frete -->
-    <div class="card">
-        <div class="card-header">Cálculo de Frete</div>
-        <div class="card-body">
-            <input type="text" id="cep" class="form-control mb-2" placeholder="Digite seu CEP" />
-            <button class="btn btn-primary" onclick="calcularFrete()">Calcular Frete</button>
-            <div class="mt-3">
-                <strong>Frete estimado: <span id="frete">R$ 0,00</span></strong><br />
-                <strong>Total com frete: <span id="total-geral">R$ 0,00</span></strong>
+            <!-- Coluna lateral -->
+            <div class="col-lg-4 d-flex flex-column gap-3">
+
+                <!-- Cupom -->
+                <div class="card shadow-sm">
+                    <div class="card-header bg-light">🎟️ Cupom de Desconto</div>
+                    <div class="card-body">
+                        <div class="input-group">
+                            <input type="text" id="cupom" class="form-control" placeholder="Digite o cupom" />
+                            <button class="btn btn-secondary" onclick="aplicarCupom()">Aplicar</button>
+                        </div>
+                        <div class="mt-2 text-success" id="mensagem-cupom"></div>
+                    </div>
+                </div>
+
+                <!-- Frete -->
+                <div class="card shadow-sm">
+                    <div class="card-header bg-light">🚚 Cálculo de Frete</div>
+                    <div class="card-body">
+                        <input type="text" id="cep" class="form-control mb-2" placeholder="Digite seu CEP" />
+                        <button class="btn btn-primary w-100" onclick="calcularFrete()">Calcular</button>
+                        <div class="mt-3 fs-6">
+                            <div><strong>Frete:</strong> <span id="frete">R$ 0,00</span></div>
+                            <div><strong>Total c/ Frete:</strong> <span id="total-geral">R$ 0,00</span></div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Finalizar Compra -->
+                <div class="card shadow-sm">
+                    <div class="card-header bg-light">💳 Finalizar Compra</div>
+                    <div class="card-body">
+                        <form onsubmit="finalizarCompra(event)">
+                            <input type="text" class="form-control mb-2" placeholder="Nome completo" required />
+                            <input type="email" class="form-control mb-2" placeholder="E-mail" required />
+                            <input type="text" class="form-control mb-2" placeholder="Endereço" required />
+                            <input type="text" class="form-control mb-2" placeholder="Cidade" required />
+                            <input type="text" class="form-control mb-2" placeholder="Estado" required />
+                            <input type="text" class="form-control mb-2" placeholder="Número do Cartão" required />
+                            <input type="text" class="form-control mb-2" placeholder="Validade (MM/AA)" required />
+                            <input type="text" class="form-control mb-3" placeholder="CVV" required />
+                            <button type="submit" class="btn btn-success w-100 fs-5">Finalizar Compra</button>
+                        </form>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 
-    <!-- Formulário -->
-    <div class="card">
-        <div class="card-header">Finalizar Compra</div>
-        <div class="card-body">
-            <form onsubmit="finalizarCompra(event)">
-                <input type="text" class="form-control mb-2" placeholder="Nome completo" required />
-                <input type="email" class="form-control mb-2" placeholder="E-mail" required />
-                <input type="text" class="form-control mb-2" placeholder="Endereço" required />
-                <input type="text" class="form-control mb-2" placeholder="Cidade" required />
-                <input type="text" class="form-control mb-2" placeholder="Estado" required />
-                <input type="text" class="form-control mb-2" placeholder="Número do Cartão" required />
-                <input type="text" class="form-control mb-2" placeholder="Validade (MM/AA)" required />
-                <input type="text" class="form-control mb-2" placeholder="CVV" required />
-                <button type="submit" class="btn btn-success w-100">Finalizar Compra</button>
-            </form>
-        </div>
-    </div>
-    </div>
-
-    <!-- Modal de Confirmação Animado -->
+    <!-- Modal -->
     <div class="modal fade" id="modalConfirmacao" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content text-center animate__animated animate__zoomIn">
@@ -91,8 +124,8 @@
                     <p>Você receberá um e-mail com os detalhes do pedido.</p>
                 </div>
                 <div class="modal-footer justify-content-center">
-                    <button class="btn btn-outline-secondary" onclick="window.location.href='index.html'">Continuar
-                        comprando</button>
+                    <button class="btn btn-outline-secondary" onclick="window.location.href='produtos.html'">Voltar à
+                        Loja</button>
                     <button class="btn btn-success" data-bs-dismiss="modal" onclick="limparCarrinho()">Fechar</button>
                 </div>
             </div>
@@ -100,7 +133,7 @@
     </div>
 
     <script>
-        // Carrega os produtos do localStorage ou inicializa com um array vazio
+        let produtos = JSON.parse(localStorage.getItem("carrinho")) || [];
         let totalProdutos = 0;
         let frete = 0;
         let desconto = 0;
@@ -119,7 +152,9 @@
                 li.className = "list-group-item d-flex justify-content-between align-items-center";
                 li.innerHTML = `
         ${prod.nome} <span>R$ ${prod.preco.toFixed(2)}</span>
-        <button class="btn btn-danger btn-sm ms-3" onclick="removerProduto(${index})">Remover</button>
+        <button class="btn btn-danger btn-sm ms-2" onclick="removerProduto(${index})">
+          <i class="bi bi-x"></i>
+        </button>
       `;
                 lista.appendChild(li);
                 totalProdutos += prod.preco;
@@ -133,6 +168,12 @@
 
         function removerProduto(index) {
             produtos.splice(index, 1);
+            atualizarCarrinho();
+        }
+
+        function limparCarrinho() {
+            produtos = [];
+            localStorage.removeItem("carrinho");
             atualizarCarrinho();
         }
 
@@ -168,20 +209,15 @@
         }
 
         function finalizarCompra(event) {
-            function finalizarCompra(event) {
-                event.preventDefault();
-                const modal = new bootstrap.Modal(document.getElementById('modalConfirmacao'));
-                modal.show();
-            }
+            event.preventDefault();
+            const modal = new bootstrap.Modal(document.getElementById('modalConfirmacao'));
+            modal.show();
         }
-        localStorage.removeItem("carrinho");
-        location.reload();
 
         atualizarCarrinho();
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 </html>
