--- a/index.html
+++ b/index.html
@@ -2,123 +2,132 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeekStore</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-     <!-- Ícones Bootstrap -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GeekStore</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .newsletter-flutuante {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      z-index: 1000;
+      width: 300px;
+    }
 
+    .newsletter-flutuante h3 {
+      margin-top: 0;
+    }
 
-       
+    .newsletter-fechar {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      cursor: pointer;
+      font-size: 20px;
+      color: #999;
+    }
+
+    .card-title {
+      font-weight: 600;
+    }
+  </style>
 </head>
 
 <body>
-    <div id="menu"></div>
-    <script>
-        //carregar o conteudo do menu.html
-        fetch('menu.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('menu').innerHTML = data;
-            })
-            .catch(error => console.error('Erro ao carregar o menu:', error));
+  <div id="menu"></div>
+  <script>
+    fetch('menu.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('menu').innerHTML = data;
+      })
+      .catch(error => console.error('Erro ao carregar o menu:', error));
+  </script>
 
-    </script>
+  <div class="newsletter-flutuante" id="newsletterBox">
+    <span class="newsletter-fechar" onclick="document.getElementById('newsletterBox').style.display='none';">&times;</span>
+    <h3>Assine a Newsletter</h3>
+    <p>Receba novidades no seu e-mail!</p>
+    <form action="https://SEU_BACKEND_OU_SERVICO.com" method="POST">
+      <input type="email" name="email" class="form-control mb-2" placeholder="Seu e-mail" required>
+      <button type="submit" class="btn btn-primary w-100">Inscrever-se</button>
+    </form>
+  </div>
+  <script>
+    setTimeout(() => {
+      document.getElementById('newsletterBox').style.display = 'block';
+    }, 5000);
+  </script>
 
-    </div>
-    <div class="newsletter-flutuante" id="newsletterBox">
-        <span class="newsletter-fechar"
-            onclick="document.getElementById('newsletterBox').style.display='none';">&times;</span>
-        <h3>Assine a Newsletter</h3>
-        <p>Receba novidades no seu e-mail!</p>
-        <form action="https://SEU_BACKEND_OU_SERVICO.com" method="POST">
-            <input type="email" name="email" placeholder="Seu e-mail" required>
-            <button type="submit">Inscrever-se</button>
-        </form>
-    </div>
-    <script>
-        setTimeout(function () {
-            document.getElementById('newsletterBox').style.display = 'block';
-        }, 5000);
-    </script>
-
-    <div class="container mt-4 pt-4">
-
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="Imagens/carrosel 1.webp" class="d-block w-100" alt="..." href="funkopop.html">
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="Imagens/carrosel 2.webp" class="d-block w-100" alt="..." href="funkopop.html">
-                </div>
-                <div class="carousel-item">
-                    <img src="Imagens/carrosel 3.webp" class="d-block w-100" alt="..." href="funkopop.html">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+  <div class="container mt-5 pt-5">
+    <div id="carouselExampleInterval" class="carousel slide mb-5" data-bs-ride="carousel">
+      <div class="carousel-inner rounded shadow">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="Imagens/carrosel 1.webp" class="d-block w-100" alt="Slide 1">
         </div>
-        <div class="card" style="width: 18rem;"></div>
-
-    </div>
-
-    <div class="container mt-5 pt-5">
-        <h1 class="text-center">
-            acesse ja as nossas novidades
-            <br>
-        </h1>
-        <div class="row mt-4">
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/Funko Pop Pink Panther.webp" class=card-img-top" alt="Camiseta 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Funko Pops</h5>
-                        <p class="card-text"></p>
-                        <a href="funkopop.html" class="btn btn-primary">Acesse Já</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/camiseta rick and morty.webp" class="card-img-top" alt="Camiseta 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Camisetas</h5>
-                        <p class="card-text"></p>
-                        <a href="camisetas.html" class="btn btn-primary">Acesse Já</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/" class="card-img-top" alt="#">
-                    <div class="card-body">
-                        <h5 class="card-title">Acessórios</h5>
-                        <p class="card-text"></p>
-                        <a href="acessorios.html" class="btn btn-primary">Acesse Já</a>
-                    </div>
-                </div>
-            </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="Imagens/carrosel 2.webp" class="d-block w-100" alt="Slide 2">
         </div>
+        <div class="carousel-item">
+          <img src="Imagens/carrosel 3.webp" class="d-block w-100" alt="Slide 3">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-        crossorigin="anonymous"></script>
+    <h2 class="text-center mb-4">Acesse Já Nossas Novidades</h2>
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 shadow-sm">
+          <img src="Imagens/Funko Pop Pink Panther.webp" class="card-img-top" alt="Funko Pop">
+          <div class="card-body">
+            <h5 class="card-title">Funko Pops</h5>
+            <a href="funkopop.html" class="btn btn-primary w-100">Acesse Já</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 shadow-sm">
+          <img src="Imagens/camiseta rick and morty.webp" class="card-img-top" alt="Camiseta Rick and Morty">
+          <div class="card-body">
+            <h5 class="card-title">Camisetas</h5>
+            <a href="camisetas.html" class="btn btn-primary w-100">Acesse Já</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 shadow-sm">
+          <img src="Imagens/exemplo_acessorio.webp" class="card-img-top" alt="Acessórios Geek">
+          <div class="card-body">
+            <h5 class="card-title">Acessórios</h5>
+            <a href="acessorios.html" class="btn btn-primary w-100">Acesse Já</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="bg-dark text-white text-center py-4 mt-5">
+    <p class="mb-1">&copy; 2025 GeekStore. Todos os direitos reservados.</p>
+    <p class="mb-0">Desenvolvido por Lucas</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-    <p>Desenvolvido por Lucas</p>
 
 </html>
